GNOME Bugzilla – Bug 791906
GSocketListenerClass.event has wrong signature
Last modified: 2017-12-25 08:13:45 UTC
The signature for GSocketListener::event is: (GSocketListener *self, GSocketListenerEvent event, GSocket *socket) However, the vfunc slot provided in the signal registration is: (GSocketListener *self, GSocketListenerEvent *event, <-- notice pointer GSocket *socket) That prevents using the event vfunc correctly from subclasses of GSocketService.
Created attachment 365915 [details] [review] fix signature of event vfunc
Review of attachment 365915 [details] [review]: Yes please. Also backport it to glib-2-54.
Pushed to master and glib-2-54.